--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "devenvironment",
+  "name": "iglu.angular1.dev.env",
   "version": "1.0.0",
-  "description": "",
+  "description": "Node.js Development environment at Iglu.net to develop Angular 1 Components-based Web Apps with ES2015 language and Standard style. CSS Modules & PostCSS.",
   "main": "index.js",
   "scripts": {
+    "build": "rimraf build && webpack --bail --progress --profile && npm run server",
+    "server": "http-server ./build -o -c",
     "start": "webpack-dev-server --history-api-fallback --inline --progress",
     "lint": "npm run lint:js && npm run lint:css",
     "lint:js": "eslint src",
@@ -28,6 +30,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "~2.22.0",
+    "http-server": "^0.9.0",
     "humps": "~1.1.0",
     "json-loader": "^0.5.4",
     "ng-annotate-loader": "^0.2.0",
@@ -42,6 +45,8 @@
     "postcss-smart-import": "^0.4.4",
     "postcss-url": "^5.1.2",
     "precss": "^1.4.0",
+    "raw-loader": "^0.5.1",
+    "rimraf": "^2.5.4",
     "standard": "^8.5.0",
     "standard-loader": "^5.0.0",
     "style-loader": "~0.13.1",
