--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Node.js Development environment at Iglu.net to develop Angular 1 Components-based Web Apps with ES2015 language and Standard style. CSS Modules & PostCSS.",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf build && webpack --bail --progress --profile && npm run server",
+    "build": "rimraf build && webpack --bail --progress --profile && npm run server && npm run show.deploy",
     "server": "http-server ./build -o -c",
     "deploy": "git subtree push --prefix build origin gh-pages",
+    "show.deploy": "open https://miksansegundo.github.io/iglu.angular1.dev.env",
     "start": "webpack-dev-server --history-api-fallback --inline --progress",
     "lint": "npm run lint:js && npm run lint:css",
     "lint:js": "eslint src",
