--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "server": "http-server ./build -o -c",
     "deploy": "git subtree push --prefix build origin gh-pages",
     "show.deploy": "open https://miksansegundo.github.io/iglu.angular1.dev.env",
-    "start": "webpack-dev-server --history-api-fallback --inline --progress",
+    "show.dev": "open http://localhost:8080/",
+    "start": "webpack-dev-server --history-api-fallback --inline --progress && npm run show.dev",
     "lint": "npm run lint:js && npm run lint:css",
     "lint:js": "eslint src",
     "lint:css": "stylelint ./src/**/*.css"
