--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "description": "Node.js Development environment at Iglu.net to develop Angular 1 Components-based Web Apps with ES2015 language and Standard style. CSS Modules & PostCSS.",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf build && webpack --bail --progress --profile && npm run server && npm run show.deploy",
-    "server": "http-server ./build -o -c",
+    "build": "rimraf build && webpack -p --progress",
     "deploy": "git subtree push --prefix build origin gh-pages",
-    "show.deploy": "open https://miksansegundo.github.io/iglu.angular1.dev.env",
-    "show.dev": "open http://localhost:8080/",
-    "start": "webpack-dev-server --history-api-fallback --inline --progress && npm run show.dev",
+    "show:deploy": "open https://miksansegundo.github.io/iglu.angular1.dev.env",
+    "start": "webpack-dev-server --history-api-fallback --inline --progress",
     "lint": "npm run lint:js && npm run lint:css",
-    "lint:js": "eslint src",
+    "lint:js": "standard --fix --verbose | snazzy && echo 'Good Standad code :)' || echo 'Not good Standad code :('",
     "lint:css": "stylelint ./src/**/*.css"
   },
   "engines": {
@@ -24,7 +22,7 @@
   "devDependencies": {
     "autoprefixer": "^6.5.1",
     "babel-core": "~6.17.0",
-    "babel-eslint": "~7.0.0",
+    "babel-eslint": "^7.0.0",
     "babel-loader": "~6.2.5",
     "babel-polyfill": "~6.16.0",
     "babel-preset-es2015": "~6.16.0",
@@ -32,6 +30,7 @@
     "css-loader": "~0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "html-minify-loader": "^1.1.0",
     "html-webpack-plugin": "~2.22.0",
     "http-server": "^0.9.0",
     "humps": "~1.1.0",
@@ -50,12 +49,13 @@
     "precss": "^1.4.0",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.4",
+    "snazzy": "^5.0.0",
     "standard": "^8.5.0",
-    "standard-loader": "^5.0.0",
     "style-loader": "~0.13.1",
-    "stylelint": "~7.4.2",
+    "stylelint": "^7.4.2",
     "stylelint-config-standard": "~13.0.2",
     "webpack": "^2.1.0-beta.24",
+    "webpack-browser-plugin": "^1.0.12",
     "webpack-dev-middleware": "~1.8.3",
     "webpack-dev-server": "^1.16.2",
     "webpack-hot-middleware": "~2.12.1"
@@ -65,7 +65,8 @@
   },
   "standard": {
     "ignore": [
-      "/build/"
-    ]
+      "build"
+    ],
+    "parser": "babel-eslint"
   }
 }
