--- a/package.json
+++ b/package.json
@@ -30,13 +30,19 @@
     "css-loader": "~0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "html-loader": "0.4.4",
     "html-minify-loader": "^1.1.0",
     "html-webpack-plugin": "~2.22.0",
     "http-server": "^0.9.0",
     "humps": "~1.1.0",
+    "icon-maker-loader": "^0.1.7",
+    "iconfont-webpack-plugin": "0.0.9",
+    "img-loader": "1.3.1",
+    "jimp": "0.2.27",
     "json-loader": "^0.5.4",
     "ng-annotate-loader": "^0.2.0",
     "normalize.css": "~5.0.0",
+    "picturefill": "^3.0.2",
     "postcss": "~5.2.4",
     "postcss-autoreset": "^1.2.1",
     "postcss-browser-reporter": "^0.5.0",
@@ -48,17 +54,21 @@
     "postcss-url": "^5.1.2",
     "precss": "^1.4.0",
     "raw-loader": "^0.5.1",
+    "responsive-loader": "0.6.1",
     "rimraf": "^2.5.4",
     "snazzy": "^5.0.0",
     "standard": "^8.5.0",
     "style-loader": "~0.13.1",
     "stylelint": "^7.4.2",
+    "stylelint-config-css-modules": "^0.1.0",
     "stylelint-config-standard": "~13.0.2",
+    "url-loader": "0.5.7",
     "webpack": "^2.1.0-beta.24",
     "webpack-browser-plugin": "^1.0.12",
     "webpack-dev-middleware": "~1.8.3",
     "webpack-dev-server": "^1.16.2",
-    "webpack-hot-middleware": "~2.12.1"
+    "webpack-hot-middleware": "~2.12.1",
+    "webpack-notifier": "^1.4.1"
   },
   "dependencies": {
     "classnames": "^2.2.5"
