Production & Development config. Offline mode commented. Long Term Cache by filename. Favicon. npm scripts. Libs to try.

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -16,6 +16,12 @@
         ]
       }
     ],
-    "indentation": 2
+    "indentation": 2,
+    "declaration-block-no-redundant-longhand-properties": [
+      true,
+      {
+        "ignoreShorthands": ["/border/"]
+      }
+    ]
   }
 }
