--- a/package.json
+++ b/package.json
@@ -4,10 +4,20 @@
   "description": "Node.js Development environment at Iglu.net to develop Angular 1 Components-based Web Apps with ES2015 language and Standard style. CSS Modules & PostCSS.",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf build && webpack -p --progress",
-    "deploy": "git subtree push --prefix build origin gh-pages && show:deploy",
+    "build": "webpack --env.prod -p",
+    "prebuild": "npm run clean:build && npm run copy:ico",
+    "build:dev": "webpack-dev-server --env.dev",
+    "prebuild:dev": "npm run clean:build && npm run copy:ico",
+    "clean:build": "rimraf build",
+    "copy:ico": "cpy ./src/favicon.ico build",
+    "deploy": "git subtree push --prefix build origin gh-pages && npm run show:deploy",
     "show:deploy": "open https://miksansegundo.github.io/iglu.angular1.dev.env",
-    "start": "webpack-dev-server",
+    "start": "",
+    "debug": "node-nightly --inspect --debug-brk node_modules/.bin/webpack --env.debug",
+    "debug:dev": "npm run debug -- --env.dev",
+    "debug:prod": "npm run debug -- --env.prod",
+    "test": "karma start",
+    "watch:test": "npm test -- --auto-watch --no-single-run",
     "lint": "npm run lint:js && npm run lint:css",
     "lint:js": "standard --fix --verbose | snazzy && echo 'Good Standad code :)' || echo 'Not good Standad code :('",
     "lint:css": "stylelint ./src/**/*.css"
@@ -20,6 +30,7 @@
   "author": "miguelsansegundo@gmail.com",
   "license": "ISC",
   "devDependencies": {
+    "angular-ui-router": "^0.3.1",
     "autoprefixer": "^6.5.1",
     "babel-core": "~6.17.0",
     "babel-eslint": "^7.0.0",
@@ -27,6 +38,7 @@
     "babel-polyfill": "~6.16.0",
     "babel-preset-es2015": "~6.16.0",
     "babel-preset-stage-0": "~6.16.0",
+    "cpy-cli": "^1.0.1",
     "css-loader": "~0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
@@ -38,10 +50,12 @@
     "icon-maker-loader": "^0.1.7",
     "iconfont-webpack-plugin": "0.0.9",
     "img-loader": "1.3.1",
+    "inline-manifest-webpack-plugin": "^3.0.1",
     "jimp": "0.2.27",
     "json-loader": "^0.5.4",
     "ng-annotate-loader": "^0.2.0",
     "normalize.css": "~5.0.0",
+    "offline-plugin": "^3.4.2",
     "picturefill": "^3.0.2",
     "postcss": "~5.2.4",
     "postcss-autoreset": "^1.2.1",
@@ -53,9 +67,11 @@
     "postcss-smart-import": "^0.4.4",
     "postcss-url": "^5.1.2",
     "precss": "^1.4.0",
+    "progress-bar-webpack-plugin": "^1.9.0",
     "raw-loader": "^0.5.1",
     "responsive-loader": "0.6.1",
     "rimraf": "^2.5.4",
+    "script-ext-html-webpack-plugin": "^1.3.2",
     "snazzy": "^5.0.0",
     "standard": "^8.5.0",
     "style-loader": "~0.13.1",
@@ -63,12 +79,15 @@
     "stylelint-config-css-modules": "^0.1.0",
     "stylelint-config-standard": "~13.0.2",
     "url-loader": "0.5.7",
+    "watchjs": "0.0.0",
     "webpack": "^2.1.0-beta.24",
     "webpack-browser-plugin": "^1.0.12",
+    "webpack-config-utils": "^2.1.0",
     "webpack-dev-middleware": "~1.8.3",
     "webpack-dev-server": "^1.16.2",
     "webpack-hot-middleware": "~2.12.1",
-    "webpack-notifier": "^1.4.1"
+    "webpack-notifier": "^1.4.1",
+    "webpack-validator": "^2.2.9"
   },
   "dependencies": {
     "classnames": "^2.2.5"
