--- a/package.json
+++ b/package.json
@@ -37,16 +37,13 @@
     "babel-eslint": "^7.0.0",
     "babel-loader": "~6.2.5",
     "babel-polyfill": "~6.16.0",
-    "babel-preset-es2015": "~6.16.0",
-    "babel-preset-stage-0": "~6.16.0",
+    "babel-preset-es2015": "^6.18.0",
     "cpy-cli": "^1.0.1",
     "css-loader": "~0.25.0",
-    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-loader": "0.4.4",
     "html-minify-loader": "^1.1.0",
     "html-webpack-plugin": "~2.22.0",
-    "http-server": "^0.9.0",
     "humps": "~1.1.0",
     "icon-maker-loader": "^0.1.7",
     "iconfont-webpack-plugin": "0.0.9",
@@ -55,14 +52,12 @@
     "jimp": "0.2.27",
     "json-loader": "^0.5.4",
     "ng-annotate-loader": "^0.2.0",
-    "normalize.css": "~5.0.0",
     "offline-plugin": "^3.4.2",
     "picturefill": "^3.0.2",
     "postcss": "~5.2.4",
     "postcss-autoreset": "^1.2.1",
     "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "~2.8.0",
-    "postcss-import": "8.1.0",
     "postcss-loader": "~0.13.0",
     "postcss-reporter": "~1.4.1",
     "postcss-smart-import": "^0.4.4",
