--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --env.prod -p",
-    "prebuild": "npm run clean:build && npm run copy:ico",
-    "postbuild": "rm -f ./build/manifest.* ./build/vendor.map",
+    "prebuild": "npm run clean:build",
     "build:dev": "webpack-dev-server --env.dev",
-    "prebuild:dev": "npm run clean:build && npm run copy:ico",
+    "prebuild:dev": "npm run clean:build",
+    "clean:files": "rm -f ./build/manifest.* ./build/vendor.map",
     "clean:build": "rimraf build",
     "copy:ico": "cpy ./src/favicon.ico build",
     "deploy": "git subtree push --prefix build origin gh-pages && npm run show:deploy",
@@ -81,7 +81,9 @@
     "webpack-dev-middleware": "~1.8.3",
     "webpack-dev-server": "^1.16.2",
     "webpack-hot-middleware": "~2.12.1",
+    "webpack-md5-hash": "0.0.5",
     "webpack-notifier": "^1.4.1",
+    "webpack-shell-plugin": "^0.4.3",
     "webpack-validator": "^2.2.9"
   },
   "dependencies": {
