--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "deploy": "git subtree push --prefix build origin gh-pages && npm run show:deploy",
     "show:deploy": "open https://miksansegundo.github.io/iglu.angular1.dev.env",
     "start": "",
-    "debug": "node-nightly --inspect --debug-brk node_modules/.bin/webpack --env.debug",
+    "debug": "node-nightly --inspect --debug-brk node_modules/.bin/webpack-dev-server --env.dev --env.debug",
     "debug:dev": "npm run debug -- --env.dev",
     "debug:prod": "npm run debug -- --env.prod",
     "test": "karma start",
@@ -40,6 +40,7 @@
     "babel-preset-es2015": "^6.18.0",
     "cpy-cli": "^1.0.1",
     "css-loader": "~0.25.0",
+    "ejs-compiled-loader": "^1.1.0",
     "file-loader": "^0.9.0",
     "html-loader": "0.4.4",
     "html-minify-loader": "^1.1.0",
