--- a/.stylelintrc
+++ b/.stylelintrc
@@ -17,11 +17,7 @@
       }
     ],
     "indentation": 2,
-    "declaration-block-no-redundant-longhand-properties": [
-      true,
-      {
-        "ignoreShorthands": ["/border/"]
-      }
-    ]
+    "declaration-block-no-redundant-longhand-properties": null,
+    "selector-type-no-unknown": null
   }
 }
