--- a/package.json
+++ b/package.json
@@ -6,22 +6,23 @@
   "scripts": {
     "build": "webpack --env.prod -p",
     "prebuild": "npm run clean:build",
-    "build:dev": "webpack-dev-server --env.dev",
-    "prebuild:dev": "npm run clean:build",
+    "postbuild:dev": "opn http://localhost:8080",
+    "build:dev": "concurrently \"npm run server\" \"webpack-dev-server --env.dev\"",
     "clean:files": "rm -f ./build/manifest.* ./build/vendor.map",
     "clean:build": "rimraf build",
     "copy:ico": "cpy ./src/favicon.ico build",
     "deploy": "git subtree push --prefix build origin gh-pages && npm run show:deploy",
-    "show:deploy": "open https://miksansegundo.github.io/iglu.angular1.dev.env",
+    "show:deploy": "opn https://miksansegundo.github.io/iglu.angular1.dev.env",
     "start": "",
+    "server": "json-server ./test/db.json",
     "debug": "node-nightly --inspect --debug-brk node_modules/.bin/webpack-dev-server --env.dev --env.debug",
     "debug:dev": "npm run debug -- --env.dev",
     "debug:prod": "npm run debug -- --env.prod",
-    "test": "karma start",
+    "test": "karma start || true",
     "watch:test": "npm test -- --auto-watch --no-single-run",
     "lint": "npm run lint:js && npm run lint:css",
-    "lint:js": "standard --fix --verbose | snazzy && echo 'Good Standad code :)' || echo 'Not good Standad code :('",
-    "lint:css": "stylelint ./src/**/*.css"
+    "lint:js": "standard ./src --fix --verbose | snazzy && echo 'Good Standad code :)' || echo 'Not good Standad code :('",
+    "lint:css": "stylelint ./src/**/*.css && echo 'Good Style code :)' || echo 'Not good Style code :('"
   },
   "engines": {
     "node": "6.7",
@@ -31,13 +32,18 @@
   "author": "miguelsansegundo@gmail.com",
   "license": "ISC",
   "devDependencies": {
-    "angular-ui-router": "^0.3.1",
+    "angular": "^1.5.8",
+    "angular-mocks": "^1.5.8",
+    "angular-ui-bootstrap": "^2.2.0",
+    "angular-ui-router": "^1.0.0-beta.3",
     "autoprefixer": "^6.5.1",
     "babel-core": "~6.17.0",
     "babel-eslint": "^7.0.0",
     "babel-loader": "~6.2.5",
     "babel-polyfill": "~6.16.0",
     "babel-preset-es2015": "^6.18.0",
+    "chai": "^3.5.0",
+    "concurrently": "^3.1.0",
     "cpy-cli": "^1.0.1",
     "css-loader": "~0.25.0",
     "ejs-compiled-loader": "^1.1.0",
@@ -51,9 +57,21 @@
     "img-loader": "1.3.1",
     "inline-manifest-webpack-plugin": "^3.0.1",
     "jimp": "0.2.27",
+    "jsdom": "^9.8.3",
     "json-loader": "^0.5.4",
+    "json-server": "^0.8.23",
+    "karma": "^1.3.0",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-mocha": "^1.2.0",
+    "karma-mocha-reporter": "^2.2.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.0",
+    "mocha": "^3.1.2",
     "ng-annotate-loader": "^0.2.0",
     "offline-plugin": "^3.4.2",
+    "opn-cli": "^3.1.0",
     "picturefill": "^3.0.2",
     "postcss": "~5.2.4",
     "postcss-autoreset": "^1.2.1",
@@ -85,7 +103,8 @@
     "webpack-md5-hash": "0.0.5",
     "webpack-notifier": "^1.4.1",
     "webpack-shell-plugin": "^0.4.3",
-    "webpack-validator": "^2.2.9"
+    "webpack-validator": "^2.2.9",
+    "yargs": "^6.3.0"
   },
   "dependencies": {
     "classnames": "^2.2.5"
