--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "debug": "node-nightly --inspect --debug-brk node_modules/.bin/webpack-dev-server --env.dev --env.debug",
     "debug:dev": "npm run debug -- --env.dev",
     "debug:prod": "npm run debug -- --env.prod",
-    "test": "karma start || true",
+    "test": "karma start && echo 'Good Job :)' || echo 'Keep working :)'",
     "watch:test": "npm test -- --auto-watch --no-single-run",
     "lint": "npm run lint:js && npm run lint:css",
-    "lint:js": "standard ./src --fix --verbose | snazzy && echo 'Good Standad code :)' || echo 'Not good Standad code :('",
-    "lint:css": "stylelint ./src/**/*.css && echo 'Good Style code :)' || echo 'Not good Style code :('"
+    "lint:js": "standard ./src --fix --verbose | snazzy && echo 'Good Standad code :)' || echo 'You can improve the Style :)'",
+    "lint:css": "stylelint ./src/**/*.css && echo 'Good Style code :)' || echo 'You can improve the Style :)'"
   },
   "engines": {
     "node": "6.7",
