Json request from db.js

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "iglu.angular1.dev.env",
+  "name": "crossover.list",
   "version": "1.0.0",
-  "description": "Node.js Development environment at Iglu.net to develop Angular 1 Components-based Web Apps with ES2015 language and Standard style. CSS Modules & PostCSS.",
+  "description": "Node.js Development environment with Webpack to develop Angular 1.5 Components-based Web Apps with ES2015 language, Standard JS style, CSS Modules & PostCSS.",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --env.prod -p",
+    "build": "concurrently \"npm run server\" \"webpack --env.prod -p\"",
     "prebuild": "npm run clean:build",
     "postbuild:dev": "opn http://localhost:8080",
     "build:dev": "concurrently \"npm run server\" \"webpack-dev-server --env.dev\"",
@@ -13,7 +13,8 @@
     "copy:ico": "cpy ./src/favicon.ico build",
     "deploy": "git subtree push --prefix build origin gh-pages && npm run show:deploy",
     "show:deploy": "opn https://miksansegundo.github.io/iglu.angular1.dev.env",
-    "start": "",
+    "start": "concurrently \"npm run server\" \"npm run static:server\"",
+    "static:server": "http-server ./build -c-1",
     "server": "json-server ./test/db.json",
     "debug": "node-nightly --inspect --debug-brk node_modules/.bin/webpack-dev-server --env.dev --env.debug",
     "debug:dev": "npm run debug -- --env.dev",
@@ -30,7 +31,7 @@
   },
   "keywords": [],
   "author": "miguelsansegundo@gmail.com",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "angular": "^1.5.8",
     "angular-mocks": "^1.5.8",
@@ -51,6 +52,7 @@
     "html-loader": "0.4.4",
     "html-minify-loader": "^1.1.0",
     "html-webpack-plugin": "~2.22.0",
+    "http-server": "^0.9.0",
     "humps": "~1.1.0",
     "icon-maker-loader": "^0.1.7",
     "iconfont-webpack-plugin": "0.0.9",
@@ -70,6 +72,7 @@
     "karma-webpack": "^1.8.0",
     "mocha": "^3.1.2",
     "ng-annotate-loader": "^0.2.0",
+    "npm-run-all": "^3.1.1",
     "offline-plugin": "^3.4.2",
     "opn-cli": "^3.1.0",
     "picturefill": "^3.0.2",
