--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "crossover.list",
+  "name": "iglu.angular1.dev.env",
   "version": "1.0.0",
-  "description": "Node.js Development environment with Webpack to develop Angular 1.5 Components-based Web Apps with ES2015 language, Standard JS style, CSS Modules & PostCSS.",
+  "description": "Node.js Development environment at Iglu.net to develop Angular 1 Components-based Web Apps with ES2015 language and Standard style. CSS Modules & PostCSS.",
   "main": "index.js",
   "scripts": {
     "build": "concurrently \"npm run server\" \"webpack --env.prod -p\"",
@@ -13,8 +13,7 @@
     "copy:ico": "cpy ./src/favicon.ico build",
     "deploy": "git subtree push --prefix build origin gh-pages && npm run show:deploy",
     "show:deploy": "opn https://miksansegundo.github.io/iglu.angular1.dev.env",
-    "start": "concurrently \"npm run server\" \"npm run static:server\"",
-    "static:server": "http-server ./build -c-1",
+    "start": "",
     "server": "json-server ./test/db.json",
     "debug": "node-nightly --inspect --debug-brk node_modules/.bin/webpack-dev-server --env.dev --env.debug",
     "debug:dev": "npm run debug -- --env.dev",
@@ -31,7 +30,7 @@
   },
   "keywords": [],
   "author": "miguelsansegundo@gmail.com",
-  "license": "MIT",
+  "license": "ISC",
   "devDependencies": {
     "angular": "^1.5.8",
     "angular-mocks": "^1.5.8",
@@ -52,7 +51,6 @@
     "html-loader": "0.4.4",
     "html-minify-loader": "^1.1.0",
     "html-webpack-plugin": "~2.22.0",
-    "http-server": "^0.9.0",
     "humps": "~1.1.0",
     "icon-maker-loader": "^0.1.7",
     "iconfont-webpack-plugin": "0.0.9",
@@ -72,7 +70,6 @@
     "karma-webpack": "^1.8.0",
     "mocha": "^3.1.2",
     "ng-annotate-loader": "^0.2.0",
-    "npm-run-all": "^3.1.1",
     "offline-plugin": "^3.4.2",
     "opn-cli": "^3.1.0",
     "picturefill": "^3.0.2",
